# dedrv

./: .gitignore  Cargo.toml  Justfile  README.md  deny.toml  flake.nix
dedrv/: Cargo.toml  README.md  build.rs  dedrv.x
dedrv-macros/: Cargo.toml
dedrv-macros/src/: class.rs  device.rs  helpers.rs  lib.rs
dedrv/src/: lib.rs
dedrv/tests/: basic.rs
dedrv/tests/units/: accessor_after_drop.rs  accessor_after_drop.stderr
examples/basic/: Cargo.toml  build.rs  memory.x
examples/basic/.cargo/: config.toml
examples/basic/src/: main.rs
just/: init.just
nix/lib/: default.nix
