[package]
name = "basic"
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }

critical-section.workspace = true
dedrv = { path = "../../dedrv", version = "0.1.0" }

[build-dependencies]
anyhow.workspace = true
